fix lint errors