@@ -1265,7 +1265,7 @@ public class ExifInterface {
         if (l == null || l.length <= 0) {
             return null;
         }
-        return new Long(l[0]);
+        return Long.valueOf(l[0]);
     }
 
     /**
@@ -1284,7 +1284,7 @@ public class ExifInterface {
         if (l == null || l.length <= 0) {
             return null;
         }
-        return new Integer(l[0]);
+        return  Integer.valueOf(l[0]);
     }
 
     /**
@@ -1303,7 +1303,7 @@ public class ExifInterface {
         if (l == null || l.length <= 0) {
             return null;
         }
-        return new Byte(l[0]);
+        return Byte.valueOf(l[0]);
     }
 
     /**
